styling on html to prevent scrolling; fixed size and no overflow

--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,9 @@ html {
   font-family: sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 #tracklist {
